Prevent slider knob clipping through mobile nav

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -226,6 +226,7 @@ button {
 }
 
 #mobileNavbar {
+    z-index: 1;
     height: 50px;
 }
 
